--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,32 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
-	<Welcome />
+	<style>
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        body{
+            overscroll-behavior: none;
+        }
+        #container{
+            width: 100vw;
+            height: 100vh;
+        }
+        canvas{
+            display: block;
+        }
+    </style>
+	<main>
+		<div id="container"></div>
+		<style>
+			@import '@assets/style/app.css';
+		</style>
+		<script>
+			import '@assets/script/app.js'
+		</script>
+	</main>
 </Layout>
